compilador/TFTParser.py
# Generated from compilador/TFT.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TFTParser ( Parser ):

    grammarFileName = "TFT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'caracteristica'", "'unidade'", "'representa'", 
                     "','", "'sinergia'", "'requer'", "'encontrar'", "'sinergias'", 
                     "'para'", "'composicao'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMENTARIO", 
                      "WS", "NUMERO", "IDENT" ]

    RULE_caracteristica = 0
    RULE_unidade = 1
    RULE_sinergia = 2
    RULE_declaracao = 3
    RULE_declaracao_caracteristica = 4
    RULE_declaracao_unidade = 5
    RULE_declaracao_sinergia = 6
    RULE_declaracoes = 7
    RULE_saida = 8
    RULE_saida_sinergia = 9
    RULE_saida_composicao = 10
    RULE_saidas = 11
    RULE_programa = 12

    ruleNames =  [ "caracteristica", "unidade", "sinergia", "declaracao", 
                   "declaracao_caracteristica", "declaracao_unidade", "declaracao_sinergia", 
                   "declaracoes", "saida", "saida_sinergia", "saida_composicao", 
                   "saidas", "programa" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    COMENTARIO=11
    WS=12
    NUMERO=13
    IDENT=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CaracteristicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(TFTParser.IDENT, 0)

        def getRuleIndex(self):
            return TFTParser.RULE_caracteristica

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCaracteristica" ):
                return visitor.visitCaracteristica(self)
            else:
                return visitor.visitChildren(self)




    def caracteristica(self):

        localctx = TFTParser.CaracteristicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_caracteristica)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(TFTParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnidadeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(TFTParser.IDENT, 0)

        def getRuleIndex(self):
            return TFTParser.RULE_unidade

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnidade" ):
                return visitor.visitUnidade(self)
            else:
                return visitor.visitChildren(self)




    def unidade(self):

        localctx = TFTParser.UnidadeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unidade)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(TFTParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SinergiaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(TFTParser.IDENT, 0)

        def getRuleIndex(self):
            return TFTParser.RULE_sinergia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSinergia" ):
                return visitor.visitSinergia(self)
            else:
                return visitor.visitChildren(self)




    def sinergia(self):

        localctx = TFTParser.SinergiaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sinergia)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(TFTParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_caracteristica(self):
            return self.getTypedRuleContext(TFTParser.Declaracao_caracteristicaContext,0)


        def declaracao_unidade(self):
            return self.getTypedRuleContext(TFTParser.Declaracao_unidadeContext,0)


        def declaracao_sinergia(self):
            return self.getTypedRuleContext(TFTParser.Declaracao_sinergiaContext,0)


        def getRuleIndex(self):
            return TFTParser.RULE_declaracao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = TFTParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.declaracao_caracteristica()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.declaracao_unidade()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.declaracao_sinergia()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_caracteristicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def caracteristica(self):
            return self.getTypedRuleContext(TFTParser.CaracteristicaContext,0)


        def getRuleIndex(self):
            return TFTParser.RULE_declaracao_caracteristica

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_caracteristica" ):
                return visitor.visitDeclaracao_caracteristica(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_caracteristica(self):

        localctx = TFTParser.Declaracao_caracteristicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao_caracteristica)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(TFTParser.T__0)
            self.state = 38
            self.caracteristica()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_unidadeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unidade(self):
            return self.getTypedRuleContext(TFTParser.UnidadeContext,0)


        def caracteristica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TFTParser.CaracteristicaContext)
            else:
                return self.getTypedRuleContext(TFTParser.CaracteristicaContext,i)


        def getRuleIndex(self):
            return TFTParser.RULE_declaracao_unidade

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_unidade" ):
                return visitor.visitDeclaracao_unidade(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_unidade(self):

        localctx = TFTParser.Declaracao_unidadeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracao_unidade)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(TFTParser.T__1)
            self.state = 41
            self.unidade()
            self.state = 42
            self.match(TFTParser.T__2)
            self.state = 43
            self.caracteristica()
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 44
                self.match(TFTParser.T__3)
                self.state = 45
                self.caracteristica()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_sinergiaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sinergia(self):
            return self.getTypedRuleContext(TFTParser.SinergiaContext,0)


        def NUMERO(self):
            return self.getToken(TFTParser.NUMERO, 0)

        def caracteristica(self):
            return self.getTypedRuleContext(TFTParser.CaracteristicaContext,0)


        def getRuleIndex(self):
            return TFTParser.RULE_declaracao_sinergia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_sinergia" ):
                return visitor.visitDeclaracao_sinergia(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_sinergia(self):

        localctx = TFTParser.Declaracao_sinergiaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracao_sinergia)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(TFTParser.T__4)
            self.state = 52
            self.sinergia()
            self.state = 53
            self.match(TFTParser.T__5)
            self.state = 54
            self.match(TFTParser.NUMERO)
            self.state = 55
            self.caracteristica()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TFTParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(TFTParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return TFTParser.RULE_declaracoes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracoes" ):
                return visitor.visitDeclaracoes(self)
            else:
                return visitor.visitChildren(self)




    def declaracoes(self):

        localctx = TFTParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 38) != 0):
                self.state = 57
                self.declaracao()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def saida_sinergia(self):
            return self.getTypedRuleContext(TFTParser.Saida_sinergiaContext,0)


        def saida_composicao(self):
            return self.getTypedRuleContext(TFTParser.Saida_composicaoContext,0)


        def getRuleIndex(self):
            return TFTParser.RULE_saida

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaida" ):
                return visitor.visitSaida(self)
            else:
                return visitor.visitChildren(self)




    def saida(self):

        localctx = TFTParser.SaidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_saida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(TFTParser.T__6)
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.state = 64
                self.saida_sinergia()
                pass
            elif token in [10]:
                self.state = 65
                self.saida_composicao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Saida_sinergiaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unidade(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TFTParser.UnidadeContext)
            else:
                return self.getTypedRuleContext(TFTParser.UnidadeContext,i)


        def getRuleIndex(self):
            return TFTParser.RULE_saida_sinergia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaida_sinergia" ):
                return visitor.visitSaida_sinergia(self)
            else:
                return visitor.visitChildren(self)




    def saida_sinergia(self):

        localctx = TFTParser.Saida_sinergiaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_saida_sinergia)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(TFTParser.T__7)
            self.state = 69
            self.match(TFTParser.T__8)
            self.state = 70
            self.unidade()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 71
                self.match(TFTParser.T__3)
                self.state = 72
                self.unidade()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Saida_composicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sinergia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TFTParser.SinergiaContext)
            else:
                return self.getTypedRuleContext(TFTParser.SinergiaContext,i)


        def getRuleIndex(self):
            return TFTParser.RULE_saida_composicao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaida_composicao" ):
                return visitor.visitSaida_composicao(self)
            else:
                return visitor.visitChildren(self)




    def saida_composicao(self):

        localctx = TFTParser.Saida_composicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_saida_composicao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(TFTParser.T__9)
            self.state = 79
            self.match(TFTParser.T__8)
            self.state = 80
            self.sinergia()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 81
                self.match(TFTParser.T__3)
                self.state = 82
                self.sinergia()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaidasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def saida(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TFTParser.SaidaContext)
            else:
                return self.getTypedRuleContext(TFTParser.SaidaContext,i)


        def getRuleIndex(self):
            return TFTParser.RULE_saidas

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaidas" ):
                return visitor.visitSaidas(self)
            else:
                return visitor.visitChildren(self)




    def saidas(self):

        localctx = TFTParser.SaidasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_saidas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 88
                self.saida()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(TFTParser.DeclaracoesContext,0)


        def saidas(self):
            return self.getTypedRuleContext(TFTParser.SaidasContext,0)


        def EOF(self):
            return self.getToken(TFTParser.EOF, 0)

        def getRuleIndex(self):
            return TFTParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = TFTParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.declaracoes()
            self.state = 95
            self.saidas()
            self.state = 96
            self.match(TFTParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





